--- a/index.html
+++ b/index.html
@@ -6,13 +6,87 @@
     <title>CSS level 1</title>
     <link rel="stylesheet" href="style.css">
 
-    <style>
-        button{
-            background-color: blue;
-        }
-    </style>
+<!--    <style>-->
+<!--        button{-->
+<!--            background-color: blue;-->
+<!--        }-->
+<!--    </style>-->
 </head>
 <body>
+
+
+<div id="navbar">
+    navbar
+    <ul>
+        <a href="default.asp">Amazon.io</a>
+        <a href="news.asp">Account</a>
+        <a href="contact.asp">My Cart</a>
+        <a href="about.asp">Contact Us</a>
+    </ul>
+</div>
+
+
+<div id="traffic">
+    traffic light
+    <div id="red"></div>
+    <div id="yellow"></div>
+    <div id="green"></div>
+</div>
+
+
+<div id="div100">
+    level2
+    <p id="boxtext2">Bard is a convers by Google </p>
+</div>
+
+
+<div id="level2boxmodel">
+    level 2
+    <p id="boxtext">Bard is a conversational generative artificial intelligence chatbot developed by Google, based initially on the LaMDA family of large language models and later the PaLM LLM </p>
+</div>
+
+
+
+
+
+
+
+
+
+
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+
+
+
+
+
+
+
+<div id="test2">
+    <h4>now coming  towards the deept</h4>
+</div>
+
+<div id="outer">
+    outer
+    <div id="inner">
+        inner
+
+    </div>
+</div>
+
+
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+
+<p id="one">Bard is a conversational generative artificial intelligence chatbot developed by Google, based initially on the LaMDA family of large language models and later the PaLM LLM </p>
+<p id="two">Bard is a conversational generative artificial intelligence chatbot developed by Google, based initially on the LaMDA family of large language models and later the PaLM LLM </p>
 <h2>practice 1</h2>
 
 <div id="box">
@@ -28,8 +102,10 @@
 </div>
 
 <div>
-    <button  style="background-color: pink" id="button">this is button</button>
+    <button   id="button">this is button</button>
 </div>
+
+<a href="http://www.google.com">   ancher with remove text decoration </a>
 
 <br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br>
