day # 2  on css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CSS level 1</title>
     <link rel="stylesheet" href="style.css">
 
+
 <!--    <style>-->
 <!--        button{-->
 <!--            background-color: blue;-->
@@ -14,16 +15,54 @@
 </head>
 <body>
 
+<div id="header" class="layout">
+    <header>
+        <div id="navbar" >
+            <ul>
+                <a href="#">Amazon.io</a>
+                <a href="#">Account</a>
+                <a href="#">Cart</a>
+                <a href="#">Contact</a>
+                <input placeholder="Search">
+                <button>submit</button>
 
-<div id="navbar">
-    navbar
-    <ul>
-        <a href="default.asp">Amazon.io</a>
-        <a href="news.asp">Account</a>
-        <a href="contact.asp">My Cart</a>
-        <a href="about.asp">Contact Us</a>
-    </ul>
+            </ul>
+        </div>
+    </header>
 </div>
+<div id="maincontent" class="layout">
+    <main>
+        <div class="rows">
+            <div class="column">column 1</div>
+        </div>
+        <div class="column">
+            column 2
+        </div>
+        <div class="column">
+            column 3
+        </div>
+        <div class="column">
+            column 4
+        </div>
+    </main>
+</div>
+<div id="footer" class="layout">
+    <footer>
+        this is footer
+    </footer>
+</div>
+
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+<div id="inline">display properties</div>
+<button>cleck</button>
+
+
+
 
 
 <div id="traffic">
