--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=0.1" name="viewport">
     <title>CSS level 1</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 
 
@@ -18,6 +19,7 @@
 <div>
     <header id="navbar" class="layout">
         <div >
+
             <ul >
                 <li> <a href="#">Amazon.io</a></li>
                 <li><a href="#">Account</a></li>
@@ -54,16 +56,13 @@
 
         <div id="flexcontainer" >
 
-            <div id="box1" >box1
-
-            </div>
-
+            <div id="box1" ><i class="fa-solid fa-house"></i></div>
             <div id="box2">
-                <div id="box2-2">box 2.2</div>
+                <div id="box2-2"></div>
             </div>
-            <div id="box3">box3</div>
+            <div id="box3"><i class="fa-solid fa-hippo"></i></div>
             <div id="box4">box4</div>
-            <div id="box5">box5</div>
+            <div id="box5"><i class="fa-solid fa-house-fire"></i></div>
         </div>
     </main>
 </div>
